# claude-ts

./: .gitignore  LICENSE  README.md  claude-kr  claude-ts  pyproject.toml
claude_kr/: __init__.py  cli.py  clipboard.py  commands.py  executor.py  menus.py  ollama.py  repl.py  state.py  stream_parser.py  terminal.py  translation.py  ui.py
claude_tokensaver/: __init__.py  cli.py  clipboard.py  commands.py  executor.py  menus.py  ollama.py  repl.py  setup.py  state.py  stream_parser.py  terminal.py  tokens.py  translation.py  ui.py
claude_tokensaver/languages/: ar.json  bn.json  hi.json  ru.json
claude_ts/: __init__.py  cli.py  clipboard.py  commands.py  executor.py  menus.py  ollama.py  repl.py  setup.py  state.py  stream_parser.py  terminal.py  translation.py  ui.py
claude_ts/languages/: ja.json  ko.json  th.json  zh.json
