[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-ts"
version = "0.2.0"
description = "Multilingual translation proxy for Claude Code — save tokens by translating to/from English"
requires-python = ">=3.9"
dependencies = [
    "rich",
    "tiktoken",
]

[project.scripts]
claude-ts = "claude_ts.cli:main"
